Fixing issue 131 regarding visibility of advanced options

--- a/src/public/stylesheets/style.styl
+++ b/src/public/stylesheets/style.styl
@@ -125,9 +125,12 @@ $step-content-minHeight = 396px
     & > input
         float left
 
-.input-selection,
-#sequence-wrap
+.input-selection
     margin 0% 12.5%
+    overflow hidden
+
+#sequence-wrap
+    margin 2.5% 12.5% 0
     overflow hidden
 
 #drop
@@ -135,6 +138,9 @@ $step-content-minHeight = 396px
 
 #accession
     margin-bottom 0
+
+#selectFileButton
+    float right
 
 #design-form i
     margin-right 50%
@@ -152,22 +158,22 @@ $step-content-minHeight = 396px
     float left
 
 #region-help
-    margin-bottom 10%
+    margin-bottom 55px
 
 #target-help
-    margin-bottom 14%
+    margin-bottom 90px
 
 #env-help
-    margin-bottom 33%
+    margin-bottom 230px
 
 #cutsites-help
-    margin-bottom 11%
+    margin-bottom 80px
 
 #shape-help
-    margin-bottom 5%
+    margin-bottom 30px
 
 #arm-help
-    margin-bottom 40%
+    margin-bottom 250px
 
 legend
     cursor pointer
